# Automatic-increase-prodoctor-rates

./: CMakeLists.txt  auth.cpp  auth.h  config.json  monitor.cpp  monitor.h  redirect.cpp  redirect.h
python/: auth.py  launcher.py  monitor.py  redirect.py
